# hpp-corbaserver

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .mergify.yml  .pre-commit-config.yaml  CMakeLists.txt  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  NEWS  README.md  configure.ac  default.nix  deps.ac  flake.nix  hppCorbaServer.pc.in  package.xml  pyproject.toml  setup.cfg  shared.mk
.github/workflows/: update-flake-lock.yml
build-aux/: kineo.mk  pkg-config.pc.in
cmake-modules/: hpp-corbaserver-plugin.cmake  omniidl.cmake
cmake-modules/omniidl/cxx_impl/: __init__.py  main.py  template.py
doc/: Doxyfile.extra.in  Doxyfile.in  Makefile.am  footer.html  header.html  hpp.dox.in  porting-from-4-to-5.hh
doc/additionalDoc/: hppCore.h
doc/pictures/: archi.fig
idl/: Makefile.am
idl/hpp/: common.idl
idl/hpp/constraints_idl/: constraints.idl
idl/hpp/corbaserver/: Makefile.am  common.idl  obstacle.idl  precomputation.idl  problem.idl  robot.idl  server.idl  server_idl.idl  tools.idl
idl/hpp/core_idl/: _constraints.idl  _problem.idl  configuration_shooters.idl  distances.idl  path_planners.idl  path_projectors.idl  path_validations.idl  paths.idl  problem.idl  steering_methods.idl
idl/hpp/pinocchio_idl/: robots.idl
idl/server/: Makefile.am  hppciCommonServer.idl  hppciObstacleServer.idl  hppciObstacleServer.idl.in  hppciProblemServer.idl  hppciRobotServer.idl  hppciRobotServer.idl.in
include/: Makefile.am  hppciObstacle.h  hppciOpenHrp.h  hppciProblem.h  hppciRobot.h  hppciServer.h  hppciServerPrivate.h  hppciTools.h
include/hpp/: corbaserver.hh
include/hpp/corbaserver/: basic-server.hh  client.hh  config.hh.in  conversions.hh  doc.hh  fwd.hh  object-map.hh  openhrp.hh.in  orb-singleton.hh  problem-solver-map.hh  read-write-lock.hh  servant-base.hh  server-plugin.hh  server.hh  steering-method.hh
include/hpp/corbaserver/constraints_idl/: constraints.hh
include/hpp/corbaserver/core_idl/: distances.hh  path-validations.hh  paths.hh  problem.hh  steering-methods.hh
include/hppCorbaServer/: hppciObstacle.h  hppciOpenHrp.h.in  hppciProblem.h  hppciRobot.h  hppciServer.h  hppciServerPrivate.h  hppciTools.h
scripts/: configuration_space_sampler.py  convex_hull.py  hrp2.py  projected_volume.py  test_projected_volume.py  test_robot_movement.py
src/: CMakeLists.txt  Makefile.am  basic-server.hh  client.cc  conversions.cc  distances.hh  hpp-corbaserver.cc  hppCorbaServer.cpp  hppciExceptionHandlingMacros.h  hppciObstacle.cpp  hppciOpenHrp.cpp  hppciProblem.cpp  hppciRobot.cpp  hppciServer.cpp  hppciServerPrivate.cpp  hppciTools.cpp  object-map.cc  obstacle.impl.cc  obstacle.impl.hh  openhrp.cc  paths.hh  precomputation-utils.cc  precomputation-utils.hh  precomputation.impl.cc  precomputation.impl.hh  problem-solver-map.cc  problem.impl.cc  problem.impl.hh  robot.impl.cc  robot.impl.hh  servant-base.hh  server-private.cc  server-private.hh  server.cc  steering-methods.hh  tools.cc  tools.hh
src/constraints_idl/: constraints.cc
src/core_idl/: distances.cc  distances.hh  path-validations.cc  path-validations.hh  paths.cc  paths.hh  problem.hh  steering-methods.cc  steering-methods.hh
src/hpp/: __init__.py  quaternion.py  rostools.py  test_quaternion.py  transform.py  utils.py
src/hpp/corbaserver/: __init__.py  benchmark.py  client.py  ompl_benchmark_statistics.py  problem_solver.py  robot.py  tools.py
src/hpp/test/: add-quaternions.csv  div-quaternions.csv  mul-quaternions.csv  sub-quaternions.csv  transform-quaternions.csv
tests/: CMakeLists.txt  Makefile.am  atlocal.in  check_core_idl.py  common.hh  delete_servant.py  hppcorbaserver.sh  package.m4.in  path_serialization.py  port.py  problem.py  quat.py  robot.py  robot.py.in  simple-test.cc  simple-test.stdout  testsuite.at  utils.py
