<?xml version='1.0'?>
 <package format='2'>
 <name>hpp-corbaserver</name>
 <version>4.12.0</version>
 <description>Corba server for Humanoid Path Planner applications </description>

 <maintainer email='hpp@laas.fr'>Joseph Mirabel</maintainer>
 <license>LGPL</license>

 <!-- <url type='website'>https://github.com/humanoid-path-planner/hpp-corbaserver </url> -->

 <author>Joseph Mirabel</author>
 <author>Florent Lamiraux et al.</author>

 <buildtool_depend>catkin</buildtool_depend>
 <build_depend>hpp-core</build_depend>
 <exec_depend>hpp-core</exec_depend>
 <build_export_depend>hpp-core</build_export_depend>
 <build_depend>hpp-template-corba</build_depend>
 <exec_depend>hpp-template-corba</exec_depend>
 <build_export_depend>hpp-template-corba</build_export_depend>
 <build_depend>omniORB4</build_depend>
 <exec_depend>omniORB4</exec_depend>
 <build_export_depend>omniORB4</build_export_depend>
 <build_depend>omniDynamic4</build_depend>
 <exec_depend>omniDynamic4</exec_depend>
 <build_export_depend>omniDynamic4</build_export_depend>
 <build_depend>eigen3</build_depend>
 <exec_depend>eigen3</exec_depend>
 <build_export_depend>eigen3</build_export_depend>
 <build_depend>urdfdom</build_depend>
 <exec_depend>urdfdom</exec_depend>
 <build_export_depend>urdfdom</build_export_depend>
 <build_depend>hpp-fcl</build_depend>
 <exec_depend>hpp-fcl</exec_depend>
 <build_export_depend>hpp-fcl</build_export_depend>
 </package>
