<?xml version="1.0"?>
<package format="3">
  <name>hpp-corbaserver</name>
  <version>7.0.0</version>
  <description>Corba server for Humanoid Path Planner applications </description>

  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>

  <author>Joseph Mirabel</author>
  <author>Florent Lamiraux et al.</author>

  <license>BSD-2</license>

  <url type="website">https://github.com/humanoid-path-planner/hpp-pinocchio</url>
  <url type="repository">https://github.com/humanoid-path-planner/hpp-pinocchio</url>
  <url type="bugtracker">https://github.com/humanoid-path-planner/hpp-pinocchio/issues</url>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>doxygen</build_depend>

  <depend>coal</depend>
  <depend>eigen</depend>
  <depend>hpp-core</depend>
  <depend>hpp-template-corba</depend>
  <depend>omniidl</depend>
  <depend>omniorb</depend>
  <!-- Required by CMake, but not available in rosdep -->
  <!-- <depend>omniDynamic4</depend> -->
  <depend>urdfdom</depend>
  <depend>pinocchio</depend>

  <!-- The following tags are recommended by REP-136 -->
  <depend condition="$ROS_PYTHON_VERSION == 2">python</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
